tests/paczka2/big_fuzzy/86805831.err
Error in line 4: zPGXAk A814 22,0
Error in line 21: z36i4L A610 32,8
Error in line 26: z36i4L A821 19,1
Error in line 28: z36i4L A610 50,7
Error in line 32: z36i4L A814 31,6
Error in line 29: yoOz A821 25,0
Error in line 33: z36i4L A315 78,1
Error in line 41: CtabAZ A610 12,6
Error in line 49: A814 A814 27,0
Error in line 54: v9xuxa A315 41,9
Error in line 45: ReELTRYO1 A821 197,8
Error in line 66: A814 A821 -2,2
Error in line 64: v9xuxa A315 82,7
Error in line 74: ReELTRYO1 A315 22,7
Error in line 84: v9xuxa A821 45,7
Error in line 86: v9xuxa A610 74,5
Error in line 72: A814 A821 89,0
Error in line 81: yoOz A610 11,8
Error in line 56: z36i4L A814 123,9
Error in line 98: ReELTRYO1 A814 45,25
Error in line 106: yoOz A814 94,3
Error in line 108: v9xuxa A821 12,1
Error in line 113: v9xuxa A610 88,8
Error in line 123: A814 A814 44,9
Error in line 124: ReELTRYO1 A315 5,9
Error in line 125: A814 A610 26,1
Error in line 130: A814 A814 16,4
Error in line 129: ReELTRYO1 A821 35,7
Error in line 149: A814 A821 16,8
Error in line 147: yoOz A610 53,1
Error in line 153: zPGXAk A315 13,7
Error in line 176: z36i4L A814 375,61
Error in line 171: v9xuxa A814 254,0
Error in line 180: v9xuxa A315 47,1
Error in line 186: zPGXAk A315 16,7
Error in line 199: A814 A814 66,1
Error in line 217: CtabAZ A610 31,6
Error in line 204: ReELTRYO1 A610 102,1
Error in line 234: yoOz A315 24,2
